# lambda-calculus

./: CHANGELOG.md  LICENSE  README.md  lambda-calculus.cabal  prelude.lc
app/: Main.hs
src/: ADT.hs  Eval.hs  Lexer.hs  Parser.hs  Parser.y
