cabal-version:      2.4
name:               lambda-calculus
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: An interpreter for untyped lambda calculus

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ruotong Cheng
maintainer:         chengrt@cs.toronto.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        ADT,
        Eval,
        Parser,
        Lexer

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        array >= 0.5.4.0,
        containers >= 0.6.5.1,
        split >= 0.2.3.5
    hs-source-dirs:   src
    default-language: Haskell2010

executable lambda-calculus
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        containers >= 0.6.5.1,
        optparse-applicative >= 0.18.1.0,
        lambda-calculus

    hs-source-dirs:   app
    default-language: Haskell2010
